# Anti-sniffer

./: .gitignore  app.py  build_exe.bat  pyproject.toml  requirements.txt
src/anti_sniffer/: __init__.py  alerts.py  capture.py  cli.py  config.py  engine.py  gui.py  models.py  response.py  rules.py
tests/: test_rules.py
